--- a/1.css
+++ b/1.css
@@ -12,9 +12,12 @@ body {
   flex-direction: column;
 }
 #logo {
-  border: 1px solid green;
-  height: 140px;
-  width: 140px;
+  height: 100px;
+  width: 100px;
+  position: relative;
+}
+#logo > div {
+  position: absolute;
 }
 .loading {
   margin-top: 50px;
@@ -26,10 +29,128 @@ body {
   height: 20px;
 }
 #a {
+  background: red;
   top: 0;
   left: 0;
+  animation: a 2s infinite;
 }
 #b {
+  background: blue;
   right: 0;
   bottom: 0;
+  animation: b 2s infinite;
+}
+#c,
+#d,
+#e {
+  background: black;
+  height: 2px;
+  width: 140px;
+  left: -20px;
+}
+#c {
+  top: 0px;
+}
+#d {
+  top: 20px;
+  animation: d 2s infinite;
+}
+#e {
+  bottom: 0px;
+}
+#f,
+#g,
+#h {
+  background: black;
+  width: 2px;
+  height: 140px;
+  top: -20px;
+}
+#f {
+  left: 0;
+}
+#g {
+  left: 20px;
+  animation: g 2s infinite;
+}
+#h {
+  right: 0;
+}
+@keyframes d {
+  0% {
+    top: 20px;
+  }
+  25% {
+    top: 20px;
+  }
+  50% {
+    top: 80px;
+  }
+  75% {
+    top: 80px;
+  }
+  100% {
+    top: 20px;
+  }
+}
+@keyframes g {
+  0% {
+    left: 20px;
+  }
+  25% {
+    left: 80px;
+  }
+  50% {
+    left: 80px;
+  }
+  75% {
+    left: 20px;
+  }
+  100% {
+    left: 20px;
+  }
+}
+@keyframes a {
+  0% {
+    width: 20px;
+    height: 20px;
+  }
+  25% {
+    width: 80px;
+    height: 20px;
+  }
+  50% {
+    width: 80px;
+    height: 80px;
+  }
+  75% {
+    width: 20px;
+    height: 80px;
+  }
+  100% {
+    width: 20px;
+    height: 20px;
+  }
+}
+@keyframes b {
+  0% {
+    width: 80px;
+    height: 80px;
+  }
+  25% {
+    width: 20px;
+    height: 80px;
+  }
+  50% {
+    width: 20px;
+    height: 20px;
+  }
+  75% {
+    width: 80px;
+    height: 20px;
+  }
+  100% {
+    width: 80px;
+    height: 80px;
+  }
 }
